--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.344.0",
     "mongoose": "^8.0.0",
     "next": "16.1.1",
+    "numero-a-letras": "^1.0.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.4.1",
